--- a/package.json
+++ b/package.json
@@ -2,6 +2,29 @@
   "name": "test_mnn",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "description": "React Native TurboModule face detection demo using MNN and UltraFace",
+  "keywords": [
+    "react-native",
+    "turbonmodule",
+    "new-architecture",
+    "jsi",
+    "mnn",
+    "face-detection",
+    "ultraface",
+    "opencv",
+    "cpp",
+    "android",
+    "ios",
+    "deep-learning",
+    "inference",
+    "mobile",
+    "computer-vision",
+    "expo",
+    "kotlin",
+    "swift",
+    "jni",
+    "objective-cpp"
+  ],
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
